// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryLine renders SummaryLine component with items 1`] = `
<DocumentFragment>
  <div
    class="summary-line"
  >
    <div
      class="summary-line-head"
    >
      <button
        aria-controls="Line-test title"
        aria-expanded="false"
        class="summary-btn"
        id="summary-line-test title"
      >
        <div
          class="Accordion-title summary-line-title"
        >
          <div
            class="summary-line-icon"
            style="transform: rotate(0deg);"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 5.91943L16.6008 12.0001L9 18.0807V5.91943ZM11 10.0807V13.9194L13.3992 12.0001L11 10.0807Z"
                  fill="black"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </div>
          test title
        </div>
        <div
          class="stx-price summary-line-value stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$11.11
          </p>
        </div>
      </button>
    </div>
    <div
      aria-labelledby="summary-line-test title"
      class="summary-line-content"
      hidden=""
      id="summary-line-test title-div"
      role="region"
    >
      <div
        class="summary-line-child"
      >
        <div
          class="summary-child-title"
        />
        <div
          class="stx-price summary-child-value stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$1.23
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryLine renders SummaryLine component with removable items 1`] = `
<DocumentFragment>
  <div
    class="summary-line"
  >
    <div
      class="summary-line-head"
    >
      <button
        aria-controls="Line-test title"
        aria-expanded="false"
        class="summary-btn"
        id="summary-line-test title"
      >
        <div
          class="Accordion-title summary-line-title"
        >
          <div
            class="summary-line-icon"
            style="transform: rotate(0deg);"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M9 5.91943L16.6008 12.0001L9 18.0807V5.91943ZM11 10.0807V13.9194L13.3992 12.0001L11 10.0807Z"
                  fill="black"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </div>
          test title
        </div>
        <div
          class="stx-price summary-line-value stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$11.11
          </p>
        </div>
      </button>
    </div>
    <div
      aria-labelledby="summary-line-test title"
      class="summary-line-content"
      hidden=""
      id="summary-line-test title-div"
      role="region"
    >
      <div
        class="summary-line-child"
      >
        <div
          class="summary-child-title"
        >
          <button
            class="summary-child-remove"
          >
            <svg
              fill="none"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.8"
              >
                <path
                  clip-rule="evenodd"
                  d="M17.7071 7.70706L7.70712 17.7071L6.29291 16.2928L16.2929 6.29285L17.7071 7.70706Z"
                  fill="black"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M16.2929 17.7071L6.29291 7.70706L7.70712 6.29285L17.7071 16.2928L16.2929 17.7071Z"
                  fill="black"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3ZM1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12Z"
                  fill="black"
                  fill-rule="evenodd"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="stx-price summary-child-value stx-price--alight-center"
        >
          <p
            aria-label="Product price"
            class="stx-price__amount"
          >
            CA$1.23
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryLine renders SummaryLine component without items 1`] = `
<DocumentFragment>
  <div
    class="summary-line"
  >
    <div
      class="summary-line-head"
    >
      <div
        class="summary-line-title"
      >
        <div
          class="summary-line-icon"
        />
        test title
      </div>
      <div
        class="stx-price summary-line-value stx-price--alight-center"
      >
        <p
          aria-label="Product price"
          class="stx-price__amount"
        >
          CA$11.11
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
